# gui-playground

./: .gitmodules
c/: .gitignore
c/gtk4/: README.md  app_1.c
go/: README.md
pascal/: .gitignore  README.md  build.sh  fpgui_example.pas
rust/: .gitignore
rust/egui/: Cargo.toml  README.md
rust/egui/src/: main.rs
rust/fltk/: Cargo.toml  README.md
rust/fltk/src/: main.rs
rust/iced/: .low_profile  README.md
rust/iced/iced-app-example/: Cargo.toml
rust/iced/iced-app-example/src/: app.rs  main.rs  main_old_backup.rs  message.rs
rust/iced/iced-app-example/src/components/: animated_buttons.rs  config_menu.rs  menu.rs  mod.rs
rust/iced/iced-app-example/src/styles/: button.rs  mod.rs  plain.rs  theme.rs  web.rs
rust/iced/iced-app-example/src/utils/: animation.rs
rust/iced/iced-app-example/src/views/: browser_form.rs  chart.rs  form.rs  mod.rs  summary.rs
rust/iced/iced-app-example/src/widgets/: bar_chart.rs  mod.rs
rust/imgui/: Cargo.toml  README.md
rust/imgui/src/: main.rs
rust/sdl2/: Cargo.toml  README.md
rust/sdl2/src/: main.rs
